[package]
name = "lolkapm_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-server = "2.3.0"

# Other
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }